--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.0.0",
     "express": "^4.17.1",
     "hbs": "^4.0.1",
+    "html-pdf": "^2.2.0",
     "jquery": "^3.3.0",
     "popper.js": "^1.12.9",
     "request": "^2.88.0"
